<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="app.voron.ph.showcaseapp.Activities.ProductReviewsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/widget_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="@dimen/edge_interval_def"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/ordering_activity_label_customer"
                android:textAppearance="@style/TextLabelHeader3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_name"
                    style="@style/EditTextDefault"
                    android:maxLength="10"
                    android:inputType="textPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ordering_activity_customer_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_phone"
                    style="@style/EditTextDefault"
                    android:maxLength="13"
                    android:inputType="phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ordering_activity_phone_number" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:text="@string/ordering_activity_delivery_address_label"
                android:layout_marginTop="@dimen/edge_interval_def"
                android:textAppearance="@style/TextLabelHeader3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_street"
                    style="@style/EditTextDefault"
                    android:maxLength="50"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ordering_activity_street" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginEnd="@dimen/interval_2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_house"
                        android:maxLength="4"
                        style="@style/EditTextDefault"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ordering_activity_house_number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginEnd="@dimen/interval_2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_building"
                        style="@style/EditTextDefault"
                        android:maxLength="4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ordering_activity_building" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_apartments"
                        style="@style/EditTextDefault"
                        android:maxLength="4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ordering_activity_apartments_number" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/edge_interval_def"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_comments"
                    style="@style/EditTextDefault"
                    android:maxLength="100"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ordering_activity_ordering_comments" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_submit"
                android:text="@string/ordering_activity_ordering_submit_button"
                android:layout_marginTop="@dimen/interval_6"
                style="@style/ButtonGreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>

