<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/layout_coordinator"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fitsSystemWindows="true"
tools:context="app.voron.ph.showcaseapp.Activities.ProductDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/widget_app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/product_details_activity_app_bar_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/widget_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll"
            android:fitsSystemWindows="true"
            app:contentScrim="@android:color/transparent"
            app:expandedTitleMarginStart="@dimen/activity_expanded_toolbar_title_margin_start"
            app:expandedTitleMarginEnd="@dimen/activity_expanded_toolbar_title_margin_end">

                <ImageView
                    android:transitionName="preview"
                    android:id="@+id/image_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:fitsSystemWindows="true"
                    android:src="@color/colorBlue"
                    app:layout_collapseMode="parallax" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/widget_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:popupTheme="@style/AppTheme.NoActionBar"
                    app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/image_food_category"
                    android:layout_margin="@dimen/interval_4"
                    android:layout_width="@dimen/product_details_activity_food_category_icon_size"
                    android:layout_height="@dimen/product_details_activity_food_category_icon_size"
                    android:src="@drawable/ic_food_hamburger" />
                <LinearLayout
                    android:orientation="vertical"
                    android:padding="@dimen/interval_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/text_title"
                        android:transitionName="title"
                        android:text=""
                        android:textAppearance="@style/TextLabelHeader3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <LinearLayout
                        android:layout_marginTop="@dimen/interval_1"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content">
                            <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                                <!--
                                <ImageView
                                    android:src="@drawable/ic_action_clock"
                                    android:tint="@color/colorBlue"
                                    android:layout_width="25dp"
                                    android:layout_height="25dp" /> -->
                                <TextView
                                    android:text="@string/product_details_activity_cooking_time_title"
                                    android:gravity="center"
                                    android:textAppearance="@style/TextOptionTitle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent" />
                            </LinearLayout>
                            <TextView
                                android:id="@+id/text_time"
                                android:textAppearance="@style/TextOptionValue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content">
                            <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                                <!--
                                <ImageView
                                    android:src="@drawable/ic_label_outline"
                                    android:tint="@color/colorBlue"
                                    android:layout_width="25dp"
                                    android:layout_height="25dp" /> -->
                                <TextView
                                    android:text="@string/product_details_activity_cost_title"
                                    android:textAppearance="@style/TextOptionTitle"
                                    android:gravity="center"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent" />
                            </LinearLayout>
                            <TextView
                                android:id="@+id/text_cost"
                                android:textAppearance="@style/TextOptionValue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/text_description"
                android:transitionName="description"
                android:text=""
                android:layout_marginTop="@dimen/interval_1"
                android:layout_marginLeft="@dimen/interval_4"
                android:layout_marginRight="@dimen/interval_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_marginEnd="@dimen/interval_4"
                android:layout_marginStart="@dimen/interval_4"
                android:layout_marginTop="@dimen/interval_4"
                android:layout_marginBottom="@dimen/interval_1"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorGrayLight"/>

            <RelativeLayout
                android:padding="@dimen/interval_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/layout_reviews_group"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackground">

                    <TextView
                        android:textAppearance="@style/TextLabelHeader3"
                        android:layout_marginLeft="@dimen/interval_4"
                        android:layout_marginRight="@dimen/interval_4"
                        android:layout_marginTop="@dimen/interval_1"
                        android:text="@string/product_details_activity_comments_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:id="@+id/layout_reviews"
                        android:layout_marginTop="@dimen/interval_2"
                        android:layout_marginBottom="@dimen/interval_3"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </LinearLayout>

                    <View
                        android:layout_marginLeft="@dimen/interval_2"
                        android:layout_marginRight="@dimen/interval_2"
                        android:layout_marginTop="@dimen/interval_1"
                        android:layout_marginBottom="@dimen/interval_1"
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorGrayLight"/>

                    <TextView
                        android:text="@string/all_comments"
                        android:height="@dimen/product_details_activity_all_comments_button_height"
                        android:gravity="center"
                        android:textAppearance="@style/BlueButtonCaption"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <View
                        android:layout_marginLeft="@dimen/dim_10dp"
                        android:layout_marginRight="@dimen/dim_10dp"
                        android:layout_marginTop="@dimen/interval_1"
                        android:layout_marginBottom="@dimen/interval_1"
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorGrayLight"/>

                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progress_reviews"
                    android:layout_alignParentTop="true"
                    android:layout_centerInParent="true"
                    android:layout_width="@dimen/progress_spinner_size"
                    android:layout_height="@dimen/progress_spinner_size" />



            </RelativeLayout>




        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_remove_product"
        android:visibility="gone"
        android:theme="@style/ButtonRemoveFromCartRound"
        android:clickable="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:layout_anchor="@id/widget_app_bar"
        app:layout_anchorGravity="bottom|end" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_order"
        android:visibility="visible"
        android:theme="@style/ButtonAddToCartRound"
        android:clickable="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:layout_anchor="@id/widget_app_bar"
        app:layout_anchorGravity="bottom|end" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>
